--- a/basic/mnist/mnist_conv_tf_nn.ipynb
+++ b/basic/mnist/mnist_conv_tf_nn.ipynb
@@ -95,7 +95,7 @@
     "        pool_2 = max_pool_2x2(conv_2_activation)\n",
     "        pool_2_shape = pool_2.get_shape().as_list()\n",
     "        nodes = pool_2_shape[1] * pool_2_shape[2] * pool_2_shape[3]\n",
-    "        pool_2_reshaped = tf.reshape(pool_2, [pool_2_shape[0], nodes])\n",
+    "        pool_2_reshaped = tf.reshape(pool_2, [-1, nodes])\n",
     "    with tf.variable_scope(\"layer_3_fc\"):\n",
     "        fc_1_weight = get_weight([nodes, FC_SIZE])\n",
     "        if regularizer != None:\n",
@@ -135,30 +135,42 @@
    "outputs": [],
    "source": [
     "def train(mnist):\n",
-    "    x = tf.placeholder(tf.float32, [BATCH_SIZE, IMAGE_SIZE, IMAGE_SIZE, IMAGE_CHANNEL_NUM], name=\"x\")\n",
-    "    y_ = tf.placeholder(tf.float32, [BATCH_SIZE, OUTPUT_SIZE], name=\"y_\")\n",
+    "    x = tf.placeholder(tf.float32, [None, IMAGE_SIZE, IMAGE_SIZE, IMAGE_CHANNEL_NUM], name=\"x\")\n",
+    "    y_ = tf.placeholder(tf.float32, [None, OUTPUT_SIZE], name=\"y_\")\n",
     "    regularizer = tf.contrib.layers.l2_regularizer(REGULARIZATION_RATE)\n",
     "    y = inference(x, False, regularizer)\n",
     "    global_step = tf.Variable(0, trainable=False)\n",
     "    variable_ave = tf.train.ExponentialMovingAverage(MOVING_AVERAGE_DECAY, global_step)\n",
     "    variable_ave_op = variable_ave.apply(tf.trainable_variables())\n",
-    "    cross_entropy = tf.nn.sparse_softmax_cross_entropy_with_logits(logits=y, labels=tf.argmax(y_, 1))\n",
+    "    cross_entropy = tf.nn.sparse_softmax_cross_entropy_with_logits(\n",
+    "        logits=y, labels=tf.argmax(y_, 1))\n",
     "    cross_entropy_mean = tf.reduce_mean(cross_entropy)\n",
     "    loss = cross_entropy_mean + tf.add_n(tf.get_collection(\"losses\"))\n",
     "    learning_rate = tf.train.exponential_decay(\n",
-    "        LEARNING_RATE_BASE, global_step, mnist.train.num_examples / BATCH_SIZE, LEARNING_RATE_DECAY, staircase=True)\n",
-    "    train_step = tf.train.GradientDescentOptimizer(learning_rate).minimize(loss, global_step=global_step)\n",
+    "        LEARNING_RATE_BASE, global_step, mnist.train.num_examples / BATCH_SIZE, \n",
+    "        LEARNING_RATE_DECAY, staircase=True)\n",
+    "    train_step = tf.train.GradientDescentOptimizer(learning_rate).minimize(\n",
+    "        loss, global_step=global_step)\n",
     "    with tf.control_dependencies([train_step, variable_ave_op]):\n",
     "        train_op = tf.no_op(name='train')\n",
-    "        \n",
+    "\n",
+    "    correct_prediction = tf.equal(tf.argmax(y, 1), tf.argmax(y_, 1), name='correct_prediction')\n",
+    "    accuracy = tf.reduce_mean(tf.cast(correct_prediction, tf.float32), name='accuracy')\n",
+    "\n",
     "    with tf.Session() as sess:\n",
     "        tf.global_variables_initializer().run()\n",
     "        for i in range(1, TRAINING_STEPS + 1):\n",
     "            xs, ys = mnist.train.next_batch(BATCH_SIZE)\n",
     "            xs_reshaped = np.reshape(xs, [BATCH_SIZE, IMAGE_SIZE, IMAGE_SIZE, IMAGE_CHANNEL_NUM])\n",
-    "            _, loss_value, step = sess.run([train_op, loss, global_step], feed_dict={x: xs_reshaped, y_: ys})\n",
+    "            _, loss_value, acc_value, step = sess.run([train_op, loss, accuracy, global_step], \n",
+    "                                                      feed_dict={x: xs_reshaped, y_: ys})\n",
     "            if i % 200 == 0:\n",
-    "                print(\"Setp %d, loss = %g.\" % (step, loss_value))"
+    "                    print(\"Setp %d, loss = %g, accuracy = %g.\" % (step, loss_value, acc_value))\n",
+    "        x_test = np.reshape(mnist.test.images, [len(mnist.test.images), IMAGE_SIZE, \n",
+    "                                                IMAGE_SIZE, IMAGE_CHANNEL_NUM])\n",
+    "        y_test = mnist.test.labels\n",
+    "        test_acc_value = sess.run(accuracy, feed_dict={x: x_test, y_: y_test})\n",
+    "        print(\"Test accuracy = {}\".format(test_acc_value))"
    ]
   },
   {
@@ -170,25 +182,44 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "WARNING:tensorflow:From <ipython-input-10-db4d66054372>:1: read_data_sets (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use alternatives such as official/mnist/dataset.py from tensorflow/models.\n",
+      "WARNING:tensorflow:From /home/nex3z/dev/anaconda3/envs/tf/lib/python3.6/site-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:260: maybe_download (from tensorflow.contrib.learn.python.learn.datasets.base) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please write your own downloading logic.\n",
+      "WARNING:tensorflow:From /home/nex3z/dev/anaconda3/envs/tf/lib/python3.6/site-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:262: extract_images (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use tf.data to implement this functionality.\n",
       "Extracting ./data/train-images-idx3-ubyte.gz\n",
+      "WARNING:tensorflow:From /home/nex3z/dev/anaconda3/envs/tf/lib/python3.6/site-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:267: extract_labels (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use tf.data to implement this functionality.\n",
       "Extracting ./data/train-labels-idx1-ubyte.gz\n",
+      "WARNING:tensorflow:From /home/nex3z/dev/anaconda3/envs/tf/lib/python3.6/site-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:110: dense_to_one_hot (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use tf.one_hot on tensors.\n",
       "Extracting ./data/t10k-images-idx3-ubyte.gz\n",
       "Extracting ./data/t10k-labels-idx1-ubyte.gz\n",
-      "Setp 200, loss = 0.883875.\n",
-      "Setp 400, loss = 0.841683.\n",
-      "Setp 600, loss = 0.880736.\n",
-      "Setp 800, loss = 0.756989.\n",
-      "Setp 1000, loss = 0.756688.\n",
-      "Setp 1200, loss = 0.704316.\n",
-      "Setp 1400, loss = 0.71897.\n",
-      "Setp 1600, loss = 0.669258.\n",
-      "Setp 1800, loss = 0.684909.\n",
-      "Setp 2000, loss = 0.68815.\n",
-      "Setp 2200, loss = 0.770498.\n",
-      "Setp 2400, loss = 0.689331.\n",
-      "Setp 2600, loss = 0.816436.\n",
-      "Setp 2800, loss = 0.654796.\n",
-      "Setp 3000, loss = 0.673014.\n"
+      "WARNING:tensorflow:From /home/nex3z/dev/anaconda3/envs/tf/lib/python3.6/site-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:290: DataSet.__init__ (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use alternatives such as official/mnist/dataset.py from tensorflow/models.\n",
+      "Setp 200, loss = 0.999788, accuracy = 0.89.\n",
+      "Setp 400, loss = 0.849933, accuracy = 0.95.\n",
+      "Setp 600, loss = 0.702903, accuracy = 0.97.\n",
+      "Setp 800, loss = 0.762394, accuracy = 0.97.\n",
+      "Setp 1000, loss = 0.704916, accuracy = 0.98.\n",
+      "Setp 1200, loss = 0.745765, accuracy = 0.97.\n",
+      "Setp 1400, loss = 0.709202, accuracy = 0.97.\n",
+      "Setp 1600, loss = 0.731642, accuracy = 0.97.\n",
+      "Setp 1800, loss = 0.656515, accuracy = 1.\n",
+      "Setp 2000, loss = 0.655872, accuracy = 0.99.\n",
+      "Setp 2200, loss = 0.652442, accuracy = 0.99.\n",
+      "Setp 2400, loss = 0.774513, accuracy = 0.97.\n",
+      "Setp 2600, loss = 0.726183, accuracy = 0.98.\n",
+      "Setp 2800, loss = 0.677728, accuracy = 0.98.\n",
+      "Setp 3000, loss = 0.747705, accuracy = 0.96.\n",
+      "Test accuracy = 0.9797000288963318\n"
      ]
     }
    ],
@@ -200,9 +231,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:tensorflow36]",
+   "display_name": "Python [conda env:tf]",
    "language": "python",
-   "name": "conda-env-tensorflow36-py"
+   "name": "conda-env-tf-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -214,7 +245,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
