Update basic api.

--- a/dataset/1_basic_api.ipynb
+++ b/dataset/1_basic_api.ipynb
@@ -11,6 +11,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load MNIST data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -30,6 +37,13 @@
    "source": [
     "dataset = tfds.load(name='mnist')\n",
     "dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load training split"
    ]
   },
   {
@@ -57,26 +71,6 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dataset is tf.data.Dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
    "outputs": [],
    "source": [
     "NUM_EPOCHS = 10\n",
@@ -88,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -116,8 +110,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load with info"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +159,7 @@
        ")"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +182,7 @@
        "})"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +202,7 @@
        "60000"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,8 +212,198 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load with split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset_train = tfds.load(name='mnist', split=tfds.Split.TRAIN)\n",
+    "# dataset_val = tfds.load(name='mnist', split=tfds.Split.VALIDATION)\n",
+    "dataset_test = tfds.load(name='mnist', split=tfds.Split.TEST)\n",
+    "# dataset_all = tfds.load(name='mnist', split=tfds.Split.ALL)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load as supervised"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'test': <DatasetV1Adapter shapes: ((28, 28, 1), ()), types: (tf.uint8, tf.int64)>,\n",
+       " 'train': <DatasetV1Adapter shapes: ((28, 28, 1), ()), types: (tf.uint8, tf.int64)>}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset = tfds.load('mnist', as_supervised=True)\n",
+    "dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<DatasetV1Adapter shapes: ((28, 28, 1), ()), types: (tf.uint8, tf.int64)>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset['train'].take(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "image.shape = (28, 28, 1), label = 4, label.shape = ()\n"
+     ]
+    }
+   ],
+   "source": [
+    "for image, label in dataset['train'].take(1):\n",
+    "    print(f\"image.shape = {image.shape}, label = {label}, label.shape = {label.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load by version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:Found a different version 3.0.0 of dataset mnist in data_dir C:\\Users\\litia\\tensorflow_datasets. Using currently defined version 1.0.0.\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset_v1, info_v1 = tfds.load(name='mnist:1.*.*', with_info=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tfds.core.DatasetInfo(\n",
+       "    name='mnist',\n",
+       "    version=1.0.0,\n",
+       "    description='The MNIST database of handwritten digits.',\n",
+       "    homepage='http://yann.lecun.com/exdb/mnist/',\n",
+       "    features=FeaturesDict({\n",
+       "        'image': Image(shape=(28, 28, 1), dtype=tf.uint8),\n",
+       "        'label': ClassLabel(shape=(), dtype=tf.int64, num_classes=10),\n",
+       "    }),\n",
+       "    total_num_examples=70000,\n",
+       "    splits={\n",
+       "        'test': 10000,\n",
+       "        'train': 60000,\n",
+       "    },\n",
+       "    supervised_keys=('image', 'label'),\n",
+       "    citation=\"\"\"@article{lecun2010mnist,\n",
+       "      title={MNIST handwritten digit database},\n",
+       "      author={LeCun, Yann and Cortes, Corinna and Burges, CJ},\n",
+       "      journal={ATT Labs [Online]. Available: http://yann. lecun. com/exdb/mnist},\n",
+       "      volume={2},\n",
+       "      year={2010}\n",
+       "    }\"\"\",\n",
+       "    redistribution_info=,\n",
+       ")"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "info_v1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## DatasetBuilder API"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<DatasetV1Adapter shapes: {image: (28, 28, 1), label: ()}, types: {image: tf.uint8, label: tf.int64}>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mnist_builder = tfds.builder('mnist')\n",
+    "mnist_builder.download_and_prepare()\n",
+    "dataset = mnist_builder.as_dataset(split=tfds.Split.TRAIN)\n",
+    "dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## List datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +566,7 @@
        " 'yelp_polarity_reviews']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
